# LucenePlusPlus

./: .gitignore  CMakeExternal.txt  CMakeLists.txt  COPYING  README.md  README.rst  liblucene++-contrib.pc.cmake  liblucene++.pc.cmake  options.cmake  waf  wscript
include/config_h/: CMakeLists.txt  Config.h.in
src/config/: CMakeLists.txt
src/config/contrib/: CMakeLists.txt  liblucene++-contrib.pc.in  liblucene++-contribConfig.cmake.in
src/config/core/: CMakeLists.txt  liblucene++.pc.in  liblucene++Config.cmake.in
src/contrib/: CMakeLists.txt
src/contrib/highlighter/: DefaultEncoder.cpp  Encoder.cpp  Formatter.cpp  Fragmenter.cpp  GradientFormatter.cpp  Highlighter.cpp  HighlighterScorer.cpp  MapWeightedSpanTerm.cpp  NullFragmenter.cpp  QueryScorer.cpp  QueryTermExtractor.cpp  QueryTermScorer.cpp  SimpleFragmenter.cpp  SimpleHTMLEncoder.cpp  SimpleHTMLFormatter.cpp  SimpleSpanFragmenter.cpp  SpanGradientFormatter.cpp  TextFragment.cpp  TokenGroup.cpp  TokenSources.cpp  TokenStreamFromTermPositionVector.cpp  WeightedSpanTerm.cpp  WeightedSpanTermExtractor.cpp  WeightedTerm.cpp
src/contrib/include/: ArabicAnalyzer.h  ArabicLetterTokenizer.h  ArabicNormalizationFilter.h  ArabicNormalizer.h  ArabicStemFilter.h  ArabicStemmer.h  BrazilianAnalyzer.h  BrazilianStemFilter.h  BrazilianStemmer.h  CJKAnalyzer.h  CJKTokenizer.h  ChineseAnalyzer.h  ChineseFilter.h  ChineseTokenizer.h  ContribInc.h  CzechAnalyzer.h  CzechStemFilter.h  CzechStemmer.h  DefaultEncoder.h  DutchAnalyzer.h  DutchStemFilter.h  DutchStemmer.h  ElisionFilter.h  Encoder.h  EnglishPossessiveFilter.h  Formatter.h  Fragmenter.h  FrenchAnalyzer.h  FrenchLightStemFilter.h  FrenchLightStemmer.h  FrenchMinimalStemFilter.h  FrenchMinimalStemmer.h  FrenchStemFilter.h  FrenchStemmer.h  GermanAnalyzer.h  GermanLightStemFilter.h  GermanLightStemmer.h  GermanMinimalStemFilter.h  GermanMinimalStemmer.h  GermanStemFilter.h  (+44 more)
src/contrib/memory/: MemoryIndex.cpp
src/contrib/msvc/: ContribInc.cpp  dllmain.cpp  lucene_contrib.vcproj  lucene_contrib.vcxproj  lucene_contrib.vcxproj.filters
src/contrib/snowball/: SnowballAnalyzer.cpp  SnowballFilter.cpp
src/core/: CMakeLists.txt
src/core/analysis/: ASCIIFoldingFilter.cpp  Analyzer.cpp  BaseCharFilter.cpp  CachingTokenFilter.cpp  CharArraySet.cpp  CharFilter.cpp  CharReader.cpp  CharStream.cpp  CharTokenizer.cpp  FilteringTokenFilter.cpp  ISOLatin1AccentFilter.cpp  KeywordAnalyzer.cpp  KeywordMarkerFilter.cpp  KeywordTokenizer.cpp  LengthFilter.cpp  LetterTokenizer.cpp  LimitTokenCountAnalyzer.cpp  LimitTokenCountFilter.cpp  LowerCaseFilter.cpp  LowerCaseTokenizer.cpp  MappingCharFilter.cpp  NormalizeCharMap.cpp  NumericTokenStream.cpp  PerFieldAnalyzerWrapper.cpp  PorterStemFilter.cpp  PorterStemmer.cpp  ReusableAnalyzerBase.cpp  SimpleAnalyzer.cpp  StopAnalyzer.cpp  StopFilter.cpp  StopwordAnalyzerBase.cpp  TeeSinkTokenFilter.cpp  Token.cpp  TokenFilter.cpp  TokenStream.cpp  Tokenizer.cpp  WhitespaceAnalyzer.cpp  WhitespaceTokenizer.cpp  WordlistLoader.cpp
src/core/c/: .Lucene_c.cc.swp  Lucene_c.cc
src/core/document/: AbstractField.cpp  CompressionTools.cpp  DateField.cpp  DateTools.cpp  Document.cpp  Field.cpp  FieldSelector.cpp  Fieldable.cpp  LoadFirstFieldSelector.cpp  MapFieldSelector.cpp  NumberTools.cpp  NumericField.cpp  SetBasedFieldSelector.cpp
src/core/include/: BitSet.h  ByteFieldSource.h  CachingSpanFilter.h  CachingWrapperFilter.h  CheckIndex.h  ChecksumIndexInput.h  ConcurrentMergeScheduler.h  ConstantScoreQuery.h  CustomScoreQuery.h  DirectoryReader.h  DocFieldConsumersPerField.h  DocIdBitSet.h  FieldCache.h  FieldCacheTermsFilter.h  FieldValueHitQueue.h  FilteredDocIdSet.h  FilteredQuery.h  HashMap.h  HashSet.h  IndexWriter.h  Lucene.h  LuceneFactory.h  LuceneInc.h  LuceneObject.h  LuceneSignal.h  MMapDirectory.h  MatchAllDocsQuery.h  MultiSearcher.h  MultiTermQuery.h  MultipleTermPositions.h  NativeFSLockFactory.h  NearSpansUnordered.h  NoLockFactory.h  ParallelReader.h  PriorityQueue.h  QueryWrapperFilter.h  ReverseOrdFieldSource.h  ScorerDocQueue.h  SegmentInfos.h  Similarity.h  (+91 more)
src/core/index/: AbstractAllTermDocs.cpp  AllTermDocs.cpp  BufferedDeletes.cpp  ByteBlockPool.cpp  ByteSliceReader.cpp  ByteSliceWriter.cpp  CharBlockPool.cpp  CheckIndex.cpp  CompoundFileReader.cpp  CompoundFileWriter.cpp  ConcurrentMergeScheduler.cpp  DefaultSkipListReader.cpp  DefaultSkipListWriter.cpp  DirectoryReader.cpp  DocConsumer.cpp  DocConsumerPerThread.cpp  DocFieldConsumer.cpp  DocFieldConsumerPerField.cpp  DocFieldConsumerPerThread.cpp  DocFieldConsumers.cpp  DocFieldConsumersPerField.cpp  DocFieldConsumersPerThread.cpp  DocFieldProcessor.cpp  DocFieldProcessorPerField.cpp  DocFieldProcessorPerThread.cpp  DocInverter.cpp  DocInverterPerField.cpp  DocInverterPerThread.cpp  DocumentsWriter.cpp  DocumentsWriterThreadState.cpp  FieldInfo.cpp  FieldInfos.cpp  FieldInvertState.cpp  FieldSortedTermVectorMapper.cpp  FieldsReader.cpp  FieldsWriter.cpp  FilterIndexReader.cpp  FormatPostingsDocsConsumer.cpp  FormatPostingsDocsWriter.cpp  FormatPostingsFieldsConsumer.cpp  (+95 more)
src/core/msvc/: LuceneInc.cpp  dllmain.cpp  lucene++.vcproj  lucene++.vcxproj  lucene++.vcxproj.filters
src/core/queryparser/: FastCharStream.cpp  MultiFieldQueryParser.cpp  QueryParseError.cpp  QueryParser.cpp  QueryParserCharStream.cpp  QueryParserConstants.cpp  QueryParserToken.cpp  QueryParserTokenManager.cpp
src/core/search/: BooleanClause.cpp  BooleanQuery.cpp  BooleanScorer.cpp  BooleanScorer2.cpp  CachingSpanFilter.cpp  CachingWrapperFilter.cpp  Collector.cpp  ComplexExplanation.cpp  ConjunctionScorer.cpp  ConstantScoreAutoRewrite.cpp  ConstantScoreQuery.cpp  DefaultSimilarity.cpp  DisjunctionMaxQuery.cpp  DisjunctionMaxScorer.cpp  DisjunctionSumScorer.cpp  DocIdSet.cpp  DocIdSetIterator.cpp  ExactPhraseScorer.cpp  Explanation.cpp  FieldCache.cpp  FieldCacheImpl.cpp  FieldCacheRangeFilter.cpp  FieldCacheTermsFilter.cpp  FieldComparator.cpp  FieldComparatorSource.cpp  FieldDoc.cpp  (+67 more)
src/demo/: CMakeLists.txt
src/lib/: CMakeLists.txt  LibLucene.cpp
src/test/: CMakeLists.txt  main.cpp
(+2049 files in other folders)
